--- a/cards.css
+++ b/cards.css
@@ -351,10 +351,10 @@ header{
     }
 }
 
-/* .ejemplo-transicion {
+.ejemplo-transicion {
     
 
     transition: width 2s;
     margin: 32px 16px;
-} */
+}
 
